// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HybridCard2 should render is-read correctly 1`] = `
<div>
  <article
    class="hybridCard2 isRead"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          >
            <!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
            

            <!-- Generated by IcoMoon.io -->
            


            <svg
              height="512"
              id="svg2"
              inkscape:version="0.91 r13725"
              sodipodi:docname="save-normal.svg"
              version="1.1"
              viewBox="0 0 512 512"
              width="512"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:cc="http://creativecommons.org/ns#"
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
              xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
              xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
              xmlns:svg="http://www.w3.org/2000/svg"
            >
              
  
              <metadata
                id="metadata10"
              >
                
    
                <rdf:rdf>
                  
      
                  <cc:work
                    rdf:about=""
                  >
                    
        
                    <dc:format>
                      image/svg+xml
                    </dc:format>
                    
        
                    <dc:type
                      rdf:resource="http://purl.org/dc/dcmitype/StillImage"
                    />
                    
        
                    <dc:title />
                    
      
                  </cc:work>
                  
    
                </rdf:rdf>
                
  
              </metadata>
              
  
              <defs
                id="defs8"
              />
              
  
              <sodipodi:namedview
                bordercolor="#666666"
                borderopacity="1"
                gridtolerance="10"
                guidetolerance="10"
                id="namedview6"
                inkscape:current-layer="svg2"
                inkscape:cx="241.54448"
                inkscape:cy="198.97517"
                inkscape:pageopacity="0"
                inkscape:pageshadow="2"
                inkscape:window-height="1027"
                inkscape:window-maximized="1"
                inkscape:window-width="1920"
                inkscape:window-x="-8"
                inkscape:window-y="-8"
                inkscape:zoom="0.65186407"
                objecttolerance="10"
                pagecolor="#ffffff"
                showgrid="false"
              />
              
  
              <path
                d="m 366.048,55.64 0,354.4 -110.096,-85.344 -110.016,85.296 0,-354.352 220.112,0 z m 44.512,-44.512 -309.12,0 0,489.744 154.528,-119.824 154.576,119.824 0,-489.744 z"
                id="path4"
                inkscape:connector-curvature="0"
              />
              

            </svg>
            

          </span>
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;

exports[`HybridCard2 should render variant-1 correctly 1`] = `
<div>
  <article
    class="hybridCard2"
    data-variant="variant-1"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <div
        class="teaserText"
      >
        <div
          class="meta"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif s"
          >
            This is the title
          </h1>
          <p
            class="intro body-text sans s"
          >
            This is the intro
          </p>
        </div>
      </div>
    </a>
    <footer
      class="footer footer"
    >
      <menu>
        <a>
          <span
            class="icon"
          >
            <!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
            

            <!-- Generated by IcoMoon.io -->
            


            <svg
              height="512"
              id="svg2"
              inkscape:version="0.91 r13725"
              sodipodi:docname="save-normal.svg"
              version="1.1"
              viewBox="0 0 512 512"
              width="512"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:cc="http://creativecommons.org/ns#"
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
              xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
              xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
              xmlns:svg="http://www.w3.org/2000/svg"
            >
              
  
              <metadata
                id="metadata10"
              >
                
    
                <rdf:rdf>
                  
      
                  <cc:work
                    rdf:about=""
                  >
                    
        
                    <dc:format>
                      image/svg+xml
                    </dc:format>
                    
        
                    <dc:type
                      rdf:resource="http://purl.org/dc/dcmitype/StillImage"
                    />
                    
        
                    <dc:title />
                    
      
                  </cc:work>
                  
    
                </rdf:rdf>
                
  
              </metadata>
              
  
              <defs
                id="defs8"
              />
              
  
              <sodipodi:namedview
                bordercolor="#666666"
                borderopacity="1"
                gridtolerance="10"
                guidetolerance="10"
                id="namedview6"
                inkscape:current-layer="svg2"
                inkscape:cx="241.54448"
                inkscape:cy="198.97517"
                inkscape:pageopacity="0"
                inkscape:pageshadow="2"
                inkscape:window-height="1027"
                inkscape:window-maximized="1"
                inkscape:window-width="1920"
                inkscape:window-x="-8"
                inkscape:window-y="-8"
                inkscape:zoom="0.65186407"
                objecttolerance="10"
                pagecolor="#ffffff"
                showgrid="false"
              />
              
  
              <path
                d="m 366.048,55.64 0,354.4 -110.096,-85.344 -110.016,85.296 0,-354.352 220.112,0 z m 44.512,-44.512 -309.12,0 0,489.744 154.528,-119.824 154.576,119.824 0,-489.744 z"
                id="path4"
                inkscape:connector-curvature="0"
              />
              

            </svg>
            

          </span>
          <span
            data-bookmark="bookmark"
          >
            Bewaren
          </span>
        </a>
      </menu>
    </footer>
  </article>
</div>
`;
